--- a/experiment1.ipynb
+++ b/experiment1.ipynb
@@ -45,12 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Columns we are interested in\n",
     "columns_of_interest = [\n",
+    "    \"NU_INSCRICAO\", # Numero de Inscricao\n",
     "    \"TP_PRESENCA_CN\", # \"Presença na prova objetiva de Ciências da Natureza\"\n",
     "    \"TP_PRESENCA_CH\", # \"Presença na prova objetiva de Ciências Humanas\"\n",
     "    \"TP_PRESENCA_LC\", # \"Presença na prova objetiva de Linguagens e Códigos\"\n",
@@ -80,7 +81,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3389832"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.NU_INSCRICAO.__len__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,51 +114,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         TP_PRESENCA_CN  TP_PRESENCA_CH  TP_PRESENCA_LC  TP_PRESENCA_MT   \n",
-      "1                     1               1               1               1  \\\n",
-      "3                     1               1               1               1   \n",
-      "4                     1               1               1               1   \n",
-      "8                     1               1               1               1   \n",
-      "9                     1               1               1               1   \n",
-      "...                 ...             ...             ...             ...   \n",
-      "3389793               1               1               1               1   \n",
-      "3389807               1               1               1               1   \n",
-      "3389814               1               1               1               1   \n",
-      "3389815               1               1               1               1   \n",
-      "3389830               1               1               1               1   \n",
+      "         NU_INSCRICAO  TP_PRESENCA_CN  TP_PRESENCA_CH  TP_PRESENCA_LC   \n",
+      "1        210052384164               1               1               1  \\\n",
+      "3        210052128335               1               1               1   \n",
+      "4        210051353021               1               1               1   \n",
+      "8        210053417016               1               1               1   \n",
+      "9        210051128744               1               1               1   \n",
+      "...               ...             ...             ...             ...   \n",
+      "3389793  210054306230               1               1               1   \n",
+      "3389807  210051254419               1               1               1   \n",
+      "3389814  210051121001               1               1               1   \n",
+      "3389815  210051173067               1               1               1   \n",
+      "3389830  210051139675               1               1               1   \n",
       "\n",
-      "         CO_PROVA_CN  CO_PROVA_CH  CO_PROVA_LC  CO_PROVA_MT  NU_NOTA_CN   \n",
-      "1              912.0        882.0        891.0        901.0       505.9  \\\n",
-      "3              911.0        880.0        890.0        902.0       580.7   \n",
-      "4              912.0        882.0        891.0        901.0       497.7   \n",
-      "8              910.0        879.0        889.0        900.0       487.4   \n",
-      "9              909.0        881.0        892.0        899.0       507.6   \n",
-      "...              ...          ...          ...          ...         ...   \n",
-      "3389793       1048.0       1018.0       1027.0       1037.0       506.0   \n",
-      "3389807       1048.0       1018.0       1027.0       1037.0       435.6   \n",
-      "3389814       1045.0       1017.0       1028.0       1035.0       576.9   \n",
-      "3389815       1045.0       1017.0       1028.0       1035.0       449.9   \n",
-      "3389830       1048.0       1018.0       1027.0       1037.0       563.7   \n",
+      "         TP_PRESENCA_MT  CO_PROVA_CN  CO_PROVA_CH  CO_PROVA_LC  CO_PROVA_MT   \n",
+      "1                     1        912.0        882.0        891.0        901.0  \\\n",
+      "3                     1        911.0        880.0        890.0        902.0   \n",
+      "4                     1        912.0        882.0        891.0        901.0   \n",
+      "8                     1        910.0        879.0        889.0        900.0   \n",
+      "9                     1        909.0        881.0        892.0        899.0   \n",
+      "...                 ...          ...          ...          ...          ...   \n",
+      "3389793               1       1048.0       1018.0       1027.0       1037.0   \n",
+      "3389807               1       1048.0       1018.0       1027.0       1037.0   \n",
+      "3389814               1       1045.0       1017.0       1028.0       1035.0   \n",
+      "3389815               1       1045.0       1017.0       1028.0       1035.0   \n",
+      "3389830               1       1048.0       1018.0       1027.0       1037.0   \n",
       "\n",
-      "         NU_NOTA_CH  NU_NOTA_LC  NU_NOTA_MT  TP_STATUS_REDACAO   \n",
-      "1             551.8       498.3       461.5                1.0  \\\n",
-      "3             678.9       638.9       659.5                1.0   \n",
-      "4             532.4       457.6       582.6                1.0   \n",
-      "8             476.5       450.7       493.4                1.0   \n",
-      "9             539.2       494.6       413.3                1.0   \n",
-      "...             ...         ...         ...                ...   \n",
-      "3389793       405.2       416.3       450.4                1.0   \n",
-      "3389807       531.2       534.7       399.2                1.0   \n",
-      "3389814       605.6       631.0       678.0                1.0   \n",
-      "3389815       368.2       466.3       370.0                1.0   \n",
-      "3389830       646.0       550.7       706.4                1.0   \n",
+      "         NU_NOTA_CN  NU_NOTA_CH  NU_NOTA_LC  NU_NOTA_MT  TP_STATUS_REDACAO   \n",
+      "1             505.9       551.8       498.3       461.5                1.0  \\\n",
+      "3             580.7       678.9       638.9       659.5                1.0   \n",
+      "4             497.7       532.4       457.6       582.6                1.0   \n",
+      "8             487.4       476.5       450.7       493.4                1.0   \n",
+      "9             507.6       539.2       494.6       413.3                1.0   \n",
+      "...             ...         ...         ...         ...                ...   \n",
+      "3389793       506.0       405.2       416.3       450.4                1.0   \n",
+      "3389807       435.6       531.2       534.7       399.2                1.0   \n",
+      "3389814       576.9       605.6       631.0       678.0                1.0   \n",
+      "3389815       449.9       368.2       466.3       370.0                1.0   \n",
+      "3389830       563.7       646.0       550.7       706.4                1.0   \n",
       "\n",
       "         NU_NOTA_REDACAO  \n",
       "1                  560.0  \n",
@@ -152,7 +173,7 @@
       "3389815            540.0  \n",
       "3389830            660.0  \n",
       "\n",
-      "[2175444 rows x 14 columns]\n"
+      "[2175444 rows x 15 columns]\n"
      ]
     }
    ],
@@ -170,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +264,7 @@
     "assert(len(prova_lc[\"Amarela\"].dropna()) == len(prova_lc_amarela))\n",
     "assert(len(prova_lc[\"Rosa\"].dropna()) == len(prova_lc_rosa))\n",
     "assert(len(prova_lc[\"Branca\"].dropna()) == len(prova_lc_branca))\n",
-    "\n",
+    "data = data.drop(data[data.TP_PRESENCA_CN != data.TP_PRESENCA_CH].index)\n",
     "prova_mt = pd.concat(\n",
     "    [prova_mt_azul.rename(\"Azul\").reset_index(drop=True),\n",
     "     prova_mt_amarela.rename(\"Amarela\").reset_index(drop=True),\n",
@@ -254,6 +275,29 @@
     "assert(len(prova_mt[\"Amarela\"].dropna()) == len(prova_mt_amarela))\n",
     "assert(len(prova_mt[\"Rosa\"].dropna()) == len(prova_mt_rosa))\n",
     "assert(len(prova_mt[\"Cinza\"].dropna()) == len(prova_mt_cinza))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2077849\n",
+      "2077516\n",
+      "2077516\n",
+      "2077849\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(prova_cn_amarela)+len(prova_cn_azul)+len(prova_cn_cinza)+len(prova_cn_rosa))\n",
+    "print(len(prova_ch_amarela)+len(prova_ch_azul)+len(prova_ch_branca)+len(prova_ch_rosa))\n",
+    "print(len(prova_lc_amarela)+len(prova_lc_azul)+len(prova_lc_branca)+len(prova_lc_rosa))\n",
+    "print(len(prova_mt_amarela)+len(prova_mt_azul)+len(prova_mt_cinza)+len(prova_mt_rosa))"
    ]
   },
   {
@@ -391,6 +435,265 @@
     "mean_mt = prova_mt.std()\n",
     "\n",
     "print(mean_ch, mean_cn, mean_lc, mean_mt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MT\n",
+      "Azul 517658\n",
+      "Amarela 523253\n",
+      "Rosa 518543\n",
+      "Cinza 518395\n",
+      "CN\n",
+      "Azul 517658\n",
+      "Amarela 523253\n",
+      "Cinza 518395\n",
+      "Rosa 518543\n",
+      "CH\n",
+      "Azul 517132\n",
+      "Amarela 524356\n",
+      "Branca 517563\n",
+      "Rosa 518465\n",
+      "LC\n",
+      "Azul 517132\n",
+      "Amarela 524356\n",
+      "Rosa 518465\n",
+      "Branca 517563\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"MT\")\n",
+    "for column in prova_mt:\n",
+    "    print(column, len(prova_mt[column].dropna()))\n",
+    "\n",
+    "print(\"CN\")\n",
+    "for column in prova_cn:\n",
+    "    print(column, len(prova_cn[column].dropna()))\n",
+    "\n",
+    "print(\"CH\")\n",
+    "for column in prova_ch:\n",
+    "    print(column, len(prova_ch[column].dropna()))\n",
+    "\n",
+    "print(\"LC\")\n",
+    "for column in prova_lc:\n",
+    "    print(column, len(prova_lc[column].dropna()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Azul</th>\n",
+       "      <th>Amarela</th>\n",
+       "      <th>Branca</th>\n",
+       "      <th>Rosa</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>476.5</td>\n",
+       "      <td>678.9</td>\n",
+       "      <td>539.2</td>\n",
+       "      <td>551.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>502.7</td>\n",
+       "      <td>402.2</td>\n",
+       "      <td>617.9</td>\n",
+       "      <td>532.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>524.3</td>\n",
+       "      <td>419.9</td>\n",
+       "      <td>602.0</td>\n",
+       "      <td>493.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>578.9</td>\n",
+       "      <td>587.0</td>\n",
+       "      <td>602.7</td>\n",
+       "      <td>437.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>488.5</td>\n",
+       "      <td>619.5</td>\n",
+       "      <td>541.5</td>\n",
+       "      <td>346.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>524351</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>510.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>524352</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>476.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>524353</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>502.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>524354</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>380.2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>524355</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>477.2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>524356 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Azul  Amarela  Branca   Rosa\n",
+       "0       476.5    678.9   539.2  551.8\n",
+       "1       502.7    402.2   617.9  532.4\n",
+       "2       524.3    419.9   602.0  493.2\n",
+       "3       578.9    587.0   602.7  437.7\n",
+       "4       488.5    619.5   541.5  346.9\n",
+       "...       ...      ...     ...    ...\n",
+       "524351    NaN    510.3     NaN    NaN\n",
+       "524352    NaN    476.8     NaN    NaN\n",
+       "524353    NaN    502.3     NaN    NaN\n",
+       "524354    NaN    380.2     NaN    NaN\n",
+       "524355    NaN    477.2     NaN    NaN\n",
+       "\n",
+       "[524356 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prova_ch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prova_ch_azul_p = prova_ch.groupby(\"Azul\").size().reset_index(name='P')\n",
+    "prova_ch_amarela_p = prova_ch.groupby(\"Amarela\").size().reset_index(name='P')\n",
+    "prova_ch_branca_p = prova_ch.groupby(\"Branca\").size().reset_index(name='P')\n",
+    "prova_ch_rosa_p = prova_ch.groupby(\"Rosa\").size().reset_index(name='P')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4659\n",
+      "4679\n",
+      "4670\n",
+      "4672\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(prova_ch_azul_p))\n",
+    "print(len(prova_ch_amarela_p))\n",
+    "print(len(prova_ch_branca_p))\n",
+    "print(len(prova_ch_rosa_p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Azul  PAzul  Amarela  PAmarela  Branca  PBranca   Rosa  PRosa\n",
+      "0       0.0    355      0.0       363     0.0      393    0.0    342\n",
+      "1     328.9     37    328.9        51   328.9       46  328.9     52\n",
+      "2     329.0      2    329.0         8   329.0        2  329.0      2\n",
+      "3     329.2      1    329.2         9   329.2        1  329.2      5\n",
+      "4     329.3      1    329.3         7   329.3        1  329.3      4\n",
+      "...     ...    ...      ...       ...     ...      ...    ...    ...\n",
+      "4581  824.0     11    824.0         9   824.0        8  824.0      8\n",
+      "4582  827.0      8    827.0         5   827.0        9  827.0     14\n",
+      "4583  832.3      4    832.3         6   832.3        4  832.3      8\n",
+      "4584  832.5     18    832.5        14   832.5       11  832.5     18\n",
+      "4585  846.9     13    846.9        12   846.9       12  846.9     15\n",
+      "\n",
+      "[4586 rows x 8 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "merged_df = pd.merge(prova_ch_azul_p, prova_ch_amarela_p, how=\"inner\", left_on=\"Azul\", right_on=\"Amarela\", suffixes=[\"Azul\", \"Amarela\"])\n",
+    "merged_df = pd.merge(merged_df, prova_ch_branca_p, how=\"inner\", left_on=\"Azul\", right_on=\"Branca\", suffixes=[\"\", \"Branca\"])\n",
+    "merged_df = pd.merge(merged_df, prova_ch_rosa_p, how=\"inner\", left_on=\"Azul\", right_on=\"Rosa\", suffixes=[\"Branca\", \"Rosa\"])\n",
+    "print(merged_df)"
    ]
   },
   {
