--- a/experiment1.ipynb
+++ b/experiment1.ipynb
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -694,6 +694,206 @@
     "merged_df = pd.merge(merged_df, prova_ch_branca_p, how=\"inner\", left_on=\"Azul\", right_on=\"Branca\", suffixes=[\"\", \"Branca\"])\n",
     "merged_df = pd.merge(merged_df, prova_ch_rosa_p, how=\"inner\", left_on=\"Azul\", right_on=\"Rosa\", suffixes=[\"Branca\", \"Rosa\"])\n",
     "print(merged_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for column in merged_df:\n",
+    "    if column.startswith(\"P\"):\n",
+    "        merged_df[column] = merged_df[column] / merged_df[column].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Azul</th>\n",
+       "      <th>PAzul</th>\n",
+       "      <th>Amarela</th>\n",
+       "      <th>PAmarela</th>\n",
+       "      <th>Branca</th>\n",
+       "      <th>PBranca</th>\n",
+       "      <th>Rosa</th>\n",
+       "      <th>PRosa</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000687</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000693</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000760</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>328.9</td>\n",
+       "      <td>0.000072</td>\n",
+       "      <td>328.9</td>\n",
+       "      <td>0.000097</td>\n",
+       "      <td>328.9</td>\n",
+       "      <td>0.000089</td>\n",
+       "      <td>328.9</td>\n",
+       "      <td>0.000100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>329.0</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>329.0</td>\n",
+       "      <td>0.000015</td>\n",
+       "      <td>329.0</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>329.0</td>\n",
+       "      <td>0.000004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>329.2</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>329.2</td>\n",
+       "      <td>0.000017</td>\n",
+       "      <td>329.2</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>329.2</td>\n",
+       "      <td>0.000010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>329.3</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>329.3</td>\n",
+       "      <td>0.000013</td>\n",
+       "      <td>329.3</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>329.3</td>\n",
+       "      <td>0.000008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4581</th>\n",
+       "      <td>824.0</td>\n",
+       "      <td>0.000021</td>\n",
+       "      <td>824.0</td>\n",
+       "      <td>0.000017</td>\n",
+       "      <td>824.0</td>\n",
+       "      <td>0.000015</td>\n",
+       "      <td>824.0</td>\n",
+       "      <td>0.000015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4582</th>\n",
+       "      <td>827.0</td>\n",
+       "      <td>0.000015</td>\n",
+       "      <td>827.0</td>\n",
+       "      <td>0.000010</td>\n",
+       "      <td>827.0</td>\n",
+       "      <td>0.000017</td>\n",
+       "      <td>827.0</td>\n",
+       "      <td>0.000027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4583</th>\n",
+       "      <td>832.3</td>\n",
+       "      <td>0.000008</td>\n",
+       "      <td>832.3</td>\n",
+       "      <td>0.000011</td>\n",
+       "      <td>832.3</td>\n",
+       "      <td>0.000008</td>\n",
+       "      <td>832.3</td>\n",
+       "      <td>0.000015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4584</th>\n",
+       "      <td>832.5</td>\n",
+       "      <td>0.000035</td>\n",
+       "      <td>832.5</td>\n",
+       "      <td>0.000027</td>\n",
+       "      <td>832.5</td>\n",
+       "      <td>0.000021</td>\n",
+       "      <td>832.5</td>\n",
+       "      <td>0.000035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4585</th>\n",
+       "      <td>846.9</td>\n",
+       "      <td>0.000025</td>\n",
+       "      <td>846.9</td>\n",
+       "      <td>0.000023</td>\n",
+       "      <td>846.9</td>\n",
+       "      <td>0.000023</td>\n",
+       "      <td>846.9</td>\n",
+       "      <td>0.000029</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4586 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Azul     PAzul  Amarela  PAmarela  Branca   PBranca   Rosa     PRosa\n",
+       "0       0.0  0.000687      0.0  0.000693     0.0  0.000760    0.0  0.000660\n",
+       "1     328.9  0.000072    328.9  0.000097   328.9  0.000089  328.9  0.000100\n",
+       "2     329.0  0.000004    329.0  0.000015   329.0  0.000004  329.0  0.000004\n",
+       "3     329.2  0.000002    329.2  0.000017   329.2  0.000002  329.2  0.000010\n",
+       "4     329.3  0.000002    329.3  0.000013   329.3  0.000002  329.3  0.000008\n",
+       "...     ...       ...      ...       ...     ...       ...    ...       ...\n",
+       "4581  824.0  0.000021    824.0  0.000017   824.0  0.000015  824.0  0.000015\n",
+       "4582  827.0  0.000015    827.0  0.000010   827.0  0.000017  827.0  0.000027\n",
+       "4583  832.3  0.000008    832.3  0.000011   832.3  0.000008  832.3  0.000015\n",
+       "4584  832.5  0.000035    832.5  0.000027   832.5  0.000021  832.5  0.000035\n",
+       "4585  846.9  0.000025    846.9  0.000023   846.9  0.000023  846.9  0.000029\n",
+       "\n",
+       "[4586 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df"
    ]
   },
   {
